--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Intro</title>
-    <script src="assets/js/index.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/js/phone.js"></script>
   </head>
   <body></body>
 </html>
