--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Intro</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/phone.js"></script>
+    <script src="assets/js/index.js"></script>
   </head>
   <body></body>
 </html>
